Fixing the page-wrap width to be 100%. Adding width to the div content

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -78,6 +78,9 @@ ul.nav li a {
   border: solid 2px;
   padding-top: 60px;
 }
+.page-wrap {
+  width: 100%;
+}
 #home, #work, #about {
   margin-bottom: 10px;
   padding: 10px;
@@ -210,7 +213,7 @@ a{
   background: $platinum;
 }
 #about {
-  height: 30vh;
+  height: 100%;
 }
 #github-logo {
   fill: $arsenic;
@@ -220,6 +223,11 @@ a{
     fill: $sunset-orange;
     transition: all 700ms;
   }
+}
+.content {
+  height: 15vh;
+  width: 30vw;
+  line-height: 2rem;
 }
 #linkedin-logo {
   width: 80px;
